--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.8.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
