--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.8.0",
